# portfolio-trend-analyzer

./: .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  pyproject.toml  requirements.txt  show_signals.py
app/: analysis.py  depots.py  history.py  indicators.py  mail.py  main.py  models.py  notifier.py  reader.py  results_saver.py  settings.py  signal_history.py  trend_config.py  visualizer.py
docs/: ALGORITHM_VALIDATION.md  IMPLEMENTATION_PLAN.md  QUICK_REFERENCE.md  SESSION_NOTES_2026-02-10.md  SIGNAL_CONFIRMATION.md  momentum_strategy_summary.md  optionsschein_algorithmus.md  optionsschein_scoring.md  optionsschein_scoring_pandas.md  trendfolge_algorithmus.md
scripts/: compare_results.py  compare_warrant_underlying.py  fetch_warrant_data.py  show_signals.py  warrant_screener.py
tests/: test_signal_history.py
