[project]
name = "portfolio-trend-analyzer"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "email-validator>=2.3.0",
    "httpx>=0.28.1",
    "matplotlib>=3.10.8",
    "mplfinance>=0.12.10b0",
    "pandas>=2.2,<3.0",
    "pandas-ta>=0.4.71b0",
    "pydantic-extra-types[all]>=2.11.0",
    "pydantic-settings==2.7.1",
    "scipy>=1.17.0",
    "ta-lib>=0.6.8",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
